name:                hackage-security-http-client
version:             0.1.1
synopsis:            hackage-security bindings for http-client
description:         hackage-security bindings for the http-client library.
                     .
                     This is part of the Hackage Security infrastructure.
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC==9.4.1, GHC==9.2.4, GHC==9.0.2,
  GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2,
  GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

flag use-network-uri
  description: Are we using network-uri?
  manual: False

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.HttpClient
  build-depends:       base               >= 4.5 && < 4.18,
                       bytestring         >= 0.9,
                       http-client        >= 0.4 && < 0.8,
                       http-types         >= 0.8,
                       hackage-security   >= 0.5 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       RankNTypes
                       ScopedTypeVariables
  other-extensions:    OverloadedStrings
  ghc-options:         -Wall

  -- see comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 3.2
  else
    build-depends: network     >= 2.5 && < 2.6
