name:                hackage-security-http-client
version:             0.1.1
synopsis:            hackage-security bindings for http-client
description:         hackage-security bindings for the http-client library.
                     .
                     This is part of the Hackage Security infrastructure.
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

library
  exposed-modules:     Hackage.Security.Client.Repository.HttpLib.HttpClient
  build-depends:       base               >= 4.11     && < 4.23,
                       bytestring         >= 0.10.8.2 && < 0.13,
                       http-client        >= 0.4      && < 0.8,
                       http-types         >= 0.12.2   && < 0.13,
                         -- http-types-0.12.2 is the version in Stackage LTS-12.26 (GHC 8.4)
                       hackage-security   >= 0.5      && < 0.7,
                       network-uri        >= 2.6      && < 2.7,
                       network            >= 2.6      && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                       RankNTypes
                       ScopedTypeVariables
  other-extensions:    OverloadedStrings
  ghc-options:         -Wall
