name:                hackage-security-local
version:             0.1.0.0
synopsis:            Utility to manage secure file-based package repositories
homepage:            http://github.com/well-typed/hackage-security/
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

flag use-network-uri
  description: Are we using network-uri?
  manual: False

executable hackage-security
  main-is:             Main.hs
  other-modules:       Hackage.Security.Utility.Options
                       Hackage.Security.Utility.Layout
                       Prelude
  build-depends:       base                 >= 4.4,
                       bytestring           >= 0.9,
                       Cabal                >= 1.12,
                       directory            >= 1.1,
                       filepath             >= 1.2,
                       optparse-applicative >= 0.11,
                       tar                  >= 0.4,
                       time                 >= 1.2,
                       unix                 >= 2.5,
                       tar                  >= 0.4,
                       zlib                 >= 0.5,
                       hackage-security
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       FlexibleContexts
                       FlexibleInstances
                       NoMonomorphismRestriction
                       ScopedTypeVariables
                       StandaloneDeriving
                       RecordWildCards
  other-extensions:    TemplateHaskell
  ghc-options:         -Wall

  -- see comments in hackage-security.cabal
  if flag(use-network-uri)
    build-depends: network-uri >= 2.6 && < 2.7,
                   network     >= 2.6 && < 2.7
  else
    build-depends: network     >= 2.5 && < 2.6
