name:                precompute-fileinfo
version:             0.1.0.0
synopsis:            Precompute fileinfo for faster Hackage migration
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable precompute-fileinfo
  main-is:             Main.hs
  build-depends:       base                 >= 4.4,
                       bytestring           >= 0.9,
                       containers           >= 0.5,
                       deepseq              >= 1.4,
                       filepath             >= 1.2,
                       optparse-applicative >= 0.11,
                       SHA                  >= 1.6,
                       tar                  >= 0.4,
                       zlib                 >= 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  ghc-options:         -Wall
