name:                precompute-fileinfo
version:             0.1.0.0
synopsis:            Precompute fileinfo for faster Hackage migration
description:         Utility for precomputing fileinfo
                     for faster Hackage migration.
                     .
                     This is part of the Hackage Security infrastructure.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC==9.4.1, GHC==9.2.4, GHC==9.0.2,
  GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2,
  GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

executable precompute-fileinfo
  main-is:             Main.hs
  build-depends:       base                 >= 4.4,
                       bytestring           >= 0.9,
                       containers           >= 0.4,
                       deepseq              >= 1.3,
                       filepath             >= 1.2,
                       optparse-applicative >= 0.11,
                       SHA                  >= 1.6,
                       tar                  >= 0.4,
                       zlib                 >= 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  ghc-options:         -Wall
