name:                precompute-fileinfo
version:             0.1.0.0
synopsis:            Precompute fileinfo for faster Hackage migration
description:         Utility for precomputing fileinfo
                     for faster Hackage migration.
                     .
                     This is part of the Hackage Security infrastructure.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

executable precompute-fileinfo
  main-is:             Main.hs
  build-depends:       base                 >= 4.11     && < 4.23,
                       bytestring           >= 0.10.8.2 && < 0.13,
                       containers           >= 0.5.11   && < 0.9,
                       deepseq              >= 1.4.3    && < 1.6,
                       filepath             >= 1.4.2    && < 1.6,
                       optparse-applicative >= 0.13     && < 0.20,
                       SHA                  >= 1.6.4    && < 1.7,
                       tar                  >= 0.5.0.2  && < 0.8,
                         -- tar-0.5.0.2 is the version in Stackage LTS-12.26 (GHC 8.4)
                       zlib                 >= 0.6.2    && < 0.8
                         -- zlib-0.6.2 is the version in Stackage LTS-12.26 (GHC 8.4)
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  ghc-options:         -Wall
